limiting range of results to reasonable sun hours

--- a/app/views/forecast/view.html.erb
+++ b/app/views/forecast/view.html.erb
@@ -2,7 +2,7 @@
   <div>
     <ul class="uk-list">
       <% @hourly_data.each do |hour_hash| %>
-        <li><%= hour_hash[:hour] %> - UV index <%= hour_hash[:uv_index] %></li>
+        <li class="<%= hour_hash[:class] %>"><%= hour_hash[:hour] %> - UV index <%= hour_hash[:uv_index] %></li>
       <% end %>
     </ul>
   </div>
